...
          primarySwatch: Colors.indigo,
          visualDensity: VisualDensity.adaptivePlatformDensity,
        ),
        home: prefs.getKeys().isEmpty
            ? SignScreen()
            : HomeScreen(
                name: prefs.getString('name')!,
                avatar: prefs.getInt('avatar')!,
              ),
      ),
    );
  }
}
...
              textCapitalization: TextCapitalization.words,
              onChanged: (value) {
                setState(() => name = value);
              },
            ),
            TextField(
              key: Key('initial'),
              decoration: InputDecoration(
                  labelText: 'Last Initial', alignLabelWithHint: true, counterText: ''),
              textCapitalization: TextCapitalization.words,
              maxLength: 1,
              onChanged: (value) {
                setState(() => initial = value);
...
